Fixed scrollbar showing up on desktop

--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -1,9 +1,4 @@
 @media screen and (max-width: 600px) {
-	html, body, main {
-		max-width: 100vw;
-		overflow-x: hidden;
-	}
-
 	.container {
 		width: 90%;
 	}
