--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,10 @@
-body, html {
+html, body, main {
 	width: 100vw;
+	max-width: 100vw;
+	overflow-x: hidden;
+}
+
+body, html {
 	min-height: 100vh;
 	margin: 0;
 	padding: 0;
@@ -95,12 +100,7 @@ img {
 	grid-row-end: 2;
 }
 
-.comic .section-title {
-	grid-column-start: 1;
-	grid-column-end: 3;
-	grid-row-start: 1;
-	grid-row-end: 2;
-}
+.comic .section-title {grid-column-start: 1;grid-column-end: 3;grid-row-start: 1;grid-row-end: 2;}
 
 .comic .section-title h3 {
 	font-size: 36px;
@@ -144,7 +144,6 @@ img {
 	z-index: 10;
 	margin-left: -100px;
 }
-
 .moving-carrousel-wrapper:after {
 	margin-left: 0;
 	margin-right: -100px;
